# Atupa

./: .gitignore  ARBITRUM_UNIFIED_PROPOSAL.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING_GUIDE.md  action.yml  atupa.toml.example
.github/workflows/: gas-regression.yml  rust.yml
crates/atupa/: Cargo.toml
crates/atupa-aave/: Cargo.toml  README.md
crates/atupa-aave/src/: lib.rs
crates/atupa-adapters/: Cargo.toml
crates/atupa-adapters/src/: lib.rs
crates/atupa-core/: Cargo.toml
crates/atupa-core/src/: config.rs  lib.rs
crates/atupa-lido/src/: lib.rs
crates/atupa-nitro/src/: lib.rs
crates/atupa-output/: Cargo.toml
crates/atupa-output/src/: diff.rs  lib.rs
crates/atupa-parser/: Cargo.toml
crates/atupa-parser/examples/: trace_analysis.rs
crates/atupa-parser/src/: aggregator.rs  lib.rs
crates/atupa-rpc/: Cargo.toml
crates/atupa-rpc/src/: etherscan.rs  lib.rs
crates/atupa-sdk/: README.md
crates/atupa-sdk/src/: lib.rs
crates/atupa/src/: main.rs
crates/atupa/src/commands/: profile.rs
crates/ethos-cli/src/: main.rs
crates/ethos-core/src/: lib.rs
crates/ethos-output/src/: lib.rs
crates/ethos-parser/: Cargo.toml
crates/ethos-parser/src/: aggregator.rs  lib.rs
crates/ethos-rpc/: Cargo.toml
crates/ethos-rpc/src/: etherscan.rs  lib.rs
studio/: index.html  package-lock.json  package.json
studio/src/: App.tsx
studio/src/components/: DragDropZone.tsx  FlameGraph.tsx  HostIoAggregator.tsx  MetricCard.tsx  TraceInspector.tsx
studio/src/styles/: design-system.css
studio/src/types/: reportToTree.ts  trace.ts
(+1 files in other folders)
