[package]
name = "atupa"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
atupa-core = { workspace = true }
atupa-rpc = { workspace = true }
atupa-parser = { workspace = true }
atupa-adapters = { workspace = true }
atupa-output = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }

[[bin]]
name = "atupa"
path = "src/main.rs"
